[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vk_scripts"
description = "Scripts to stalk people on VK"
license = {text = "MIT"}
dynamic = ["version"]
authors = [{name = "Egor Tensin", email = "Egor.Tensin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.4"

dependencies = [
    'importlib-metadata ~= 4.0 ; python_version < "3.8"',
    "matplotlib",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/egor-tensin/vk-scripts"
"Bug Tracker" = "https://github.com/egor-tensin/vk-scripts/issues"

[project.scripts]
vk-sessions = "vk.tracking.sessions:main"
vk-status = "vk.tracking.status:main"
vk-mutuals = "vk.mutuals:main"

[tool.setuptools_scm]
