[build-system]
# The SPDX license identifiers are available from 77.0.3:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license-and-license-files
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vk_scripts"
description = "Scripts to stalk people on VK"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
authors = [{name = "Egor Tensin", email = "egor@tensin.name"}]
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    'importlib-metadata ~= 4.0 ; python_version < "3.8"',
    "matplotlib",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
"Homepage" = "https://github.com/egor-tensin/vk-scripts"
"Bug Tracker" = "https://github.com/egor-tensin/vk-scripts/issues"

[project.scripts]
vk-sessions = "vk.tracking.sessions:main"
vk-status = "vk.tracking.status:main"
vk-mutuals = "vk.mutuals:main"

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = true
