[metadata]
name = vk_scripts
version = 1.0
author = Egor Tensin
author_email = Egor.Tensin@gmail.com
description = A collection of scripts abusing VK.com API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/egor-tensin/vk-scripts
project_urls =
    Bug Tracker = https://github.com/egor-tensin/vk-scripts/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.4
install_requires =
    matplotlib

[options.entry_points]
console_scripts =
    vk-sessions = vk.tracking.sessions:main
    vk-status = vk.tracking.status:main
    vk-mutuals = vk.mutuals:main
